[gd_scene load_steps=5 format=3 uid="uid://d4ibi2kxtkdu"]

[ext_resource type="Texture2D" uid="uid://t8civb7mxjcr" path="res://sprites/buygui.png" id="1_qdyx0"]
[ext_resource type="Script" path="res://scripts/buy.gd" id="1_tmluv"]
[ext_resource type="Texture2D" uid="uid://dbfno0a0en5jv" path="res://sprites/apple.png" id="3_5ajyv"]
[ext_resource type="Texture2D" uid="uid://daxw35jswu54m" path="res://sprites/buybutton.png" id="4_87ijk"]

[node name="buy" type="Sprite2D"]
texture = ExtResource("1_qdyx0")
script = ExtResource("1_tmluv")

[node name="food" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(-59, -105)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_5ajyv")

[node name="name" type="RichTextLabel" parent="."]
unique_name_in_owner = true
offset_left = -22.0
offset_top = -124.0
offset_right = 101.0
offset_bottom = -86.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center]apple"

[node name="vbox" type="VBoxContainer" parent="."]
offset_left = -82.0
offset_top = -52.0
offset_right = 242.0
offset_bottom = 156.0
scale = Vector2(0.5, 0.5)

[node name="happiness" type="RichTextLabel" parent="vbox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 73
bbcode_enabled = true
text = "[center][img]res://sprites/happiness.png[/img] +100"

[node name="hunger" type="RichTextLabel" parent="vbox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 73
bbcode_enabled = true
text = "[center][img]res://sprites/hunger.png[/img] +100"

[node name="button" type="Area2D" parent="."]

[node name="sprite" type="Sprite2D" parent="button"]
unique_name_in_owner = true
modulate = Color(0.925353, 0.925353, 0.925353, 1)
position = Vector2(2, 105)
texture = ExtResource("4_87ijk")

[node name="price" type="RichTextLabel" parent="button"]
unique_name_in_owner = true
offset_left = -48.0
offset_top = 90.0
offset_right = 141.0
offset_bottom = 146.0
scale = Vector2(0.5, 0.5)
mouse_filter = 1
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[center][img]res://sprites/dilloncoin.png[/img]100"

[node name="hitbox" type="CollisionPolygon2D" parent="button"]
position = Vector2(2, 105)
polygon = PackedVector2Array(92.5, -21.7, 92.5, 21, 86.2, 28, -85.5, 28, -92.5, 21.7, -92.5, -21, -85.5, -27.8, 85.5, -28)

[connection signal="input_event" from="button" to="." method="_on_button_input_event"]
[connection signal="mouse_entered" from="button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="button" to="." method="_on_button_mouse_exited"]
